--- a/index.html
+++ b/index.html
@@ -13,26 +13,61 @@
   <h1>The Virus Game</h1>
   <div id="game-canvas"></div>
   <br>
-  <section>
+  <section id="info">
     <h3>How to Play</h3>
     <p>
       <ul>
         <li>A virus can either donate or take energy from each virus it is connected to.</li>
-        <li>Press 🦠 to change between donate and take</li>
+        <li>Press ⊙ to change between donate and take.</li>
         <li>Tap a virus to perform the action.</li>
         <li>The game is completed when none of the viruses have negative energy.</li>
       </ul>
     </p>
-    <br>
-    <hr>
-    <p>TODO: save and load<p>
+  </section>
+  <section>
     <h3>Game State</h3>
-    <div>
-      <label>Config</label>
-      <input type="text"></input>
+    <div id="configgrid">
+      <textarea id="gamestate" value='' onchange="setDownloadURL();"></textarea>
+      <button id="gamestate-load" onclick="resetup();">Load</button>
+      <button id="gamestate-download"><a href="" id="gamestate-download-link" download>Download</a></button>
+      <div>
+        <label for="gamestate-file">From File:</label>
+        <input type="file" name="gamestate-file" id="gamestate-file" />
+      </div>
+      <div>
+        <label for="gamestate-presets">Presets:</label>
+        <select name="gamestate-presets" id="gamestate-presets" onchange="loadpreset()">
+          <!-- <option value="preset">preset</option> -->
+        </select>
+      </div>
     </div>
-    <section>
-    <script src="js/sketch.js"></script>
+  </section>
+  <script src="js/gamedata.js"></script>
+  <script>
+    function changeGamestate(data) {
+      document.getElementById('gamestate').value = JSON.stringify(data, null, 2);
+      resetup();
+      document.location = '#';
+      setDownloadURL();
+    }
+    function loadpreset() {
+      let d = document.getElementById('gamestate-presets').value;
+      changeGamestate(gamedata[d]);
+    }
+    function setDownloadURL() {
+      // e = document.getElementById('gamestate-download-link');
+      // t = document.getElementById('gamestate');
+      // d = t.value.toDataURL('text/plain');
+      // console.log(d)
+      // e.setAttribute("href", d);
+    }
+    for (preset of Object.keys(gamedata)) {
+      parent = document.getElementById('gamestate-presets');
+      parent.innerHTML += '<option value="'+preset+'"'+(preset=="normal"?"selected":"")+'>'+preset+'</option>';
+    }
+    changeGamestate(gamedata.normal);
+  </script>
+  <script src="js/sketch.js"></script>
 </body>
 
 </html>
