--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
   <section>
     <h3>Game State</h3>
     <div id="configgrid">
-      <textarea id="gamestate" value='' onchange=""></textarea>
-      <button id="gamestate-load" onclick="resetup();">Load</button>
+      <textarea id="gamestate" value=''></textarea>
+      <button id="gamestate-load">Load</button>
       <button id="gamestate-download"><a href="" id="gamestate-download-link" download="virus.txt">Download</a></button>
       <div>
-        <label for="gamestate-file" onchange="previewFile()">From File:</label>
+        <label for="gamestate-file">From File:</label>
         <input type="file" name="gamestate-file" id="gamestate-file" />
       </div>
       <div>
         <label for="gamestate-presets">Presets:</label>
-        <select name="gamestate-presets" id="gamestate-presets" oninput="loadpreset()">
+        <select name="gamestate-presets" id="gamestate-presets" >
           <option value="custom">custom</option>
         </select>
       </div>
@@ -44,49 +44,77 @@
   </section>
   <script src="js/gamedata.js"></script>
   <script>
+
+    let custom = '{"config":[[[300,300],[1]],[[500,300],[0]]],"initialstate":[-1,1]}';
+    let gs = document.getElementById('gamestate');
+    let gsl = document.getElementById('gamestate-load');
+    let gsdl = document.getElementById('gamestate-download-link');
+    let gsf = document.getElementById('gamestate-file');
+    let gsp = document.getElementById('gamestate-presets');
+
     function changeGamestate(data) {
-      document.getElementById('gamestate').value = JSON.stringify(data, null, 2);
+      if (data) {
+        gs.value = formatJSON(JSON.stringify(data));
+      } else {
+        gs.value = formatJSON(custom);
+      }
       setup();
       document.location = '#';
       setDownloadURL();
     }
 
-    function loadpreset() {
-      let d = document.getElementById('gamestate-presets').value;
-      changeGamestate(gamedata[d]);
+    function setDownloadURL() {
+      const d = encodeURIComponent(gs.value);
+      gsdl.setAttribute("href", 'data:text/html;charset=utf-8,' + d);
     }
 
-    function setDownloadURL() {
-      const e = document.getElementById('gamestate-download-link');
-      const t = document.getElementById('gamestate');
-      const d = encodeURIComponent(t.value);
-      e.setAttribute("href", 'data:text/html;charset=utf-8,' + d);
-    }
+    gsp.addEventListener('input', () => {
+      let d = gsp.value;
+      changeGamestate(gamedata[d]);
+    });
+
+    gsl.addEventListener('click', () => {
+      gsp.selectedIndex = 0;
+      setup();
+      setDownloadURL();
+      custom = gs.value;
+    });
 
     // read and display file
     // https://stackoverflow.com/questions/18933085/display-text-file-in-javascript
-    document
-    .getElementById('gamestate-file')
-    .addEventListener(
-        'input',
-        function () {
-            var fr = new FileReader();
-            fr.onload = function () {
-                document.getElementById('gamestate').value = this.result;
-                resetup();
-                document.getElementById('gamestate-file').value="";
-            };
-            fr.readAsText(this.files[0]);
-        }
-    );
+    gsf.addEventListener('input', function () {
+      let fr = new FileReader();
+      fr.onload = function () {
+        gs.value = this.result;
+        gsp.selectedIndex = 0;
+        setup();
+        setDownloadURL();
+        gsf.value = "";
+        custom = gs.value;
+      };
+      fr.readAsText(this.files[0]);
+    });
 
     for (preset of Object.keys(gamedata)) {
-      parent = document.getElementById('gamestate-presets');
-      parent.innerHTML += '<option value="' + preset + '">' + preset + '</option>';
+      gsp.innerHTML += '<option value="' + preset + '">' + preset + '</option>';
     }
 
+    function formatJSON(_str) {
+      let str = String(_str);
+      str = str.replace(/{\"/gi, "{\n  \"");
+      str = str.replace(/\]}/gi, "]\n}");
+      str = str.replace(/\[\[\[/gi, "[\n    [[");
+      str = str.replace(/\]\]\]/gi, "]]\n  ]");
+      str = str.replace(/,\"/gi, ",\n  \"");
+      str = str.replace(/\]\],\[\[/gi, "]],\n    [[");
+      str = str.replace(/:/gi, " : ");
+      str = str.replace(/\],\[/gi, "], [");
+      return str;
+    }
 
+    gsp.selectedIndex = 2;
     changeGamestate(gamedata.normal);
+
   </script>
   <script src="js/sketch.js"></script>
 </body>
